// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/TopNavBar playground 1`] = `
.emotion-0 {
  margin: 1rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  background-color: white;
  height: 3.875rem;
  padding: 0 1rem;
  box-shadow: 0px 4px 8px rgba(16, 48, 102, 0.07);
}

.emotion-1>*:not(:last-of-type) {
  color: #0f0f17;
}

.emotion-2 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-3 {
  cursor: pointer;
  margin: 1.5rem 0px 1.5rem 0.25rem;
}

.emotion-4 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-5 {
  fill: #e7eefe;
  width: 1.5rem;
  height: 1.5rem;
}

.emotion-5 path {
  fill: #e7eefe;
}

.emotion-6 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: transparent;
  margin: 1rem 1.5rem 1rem 1rem;
  border-radius: 0.25rem;
  max-width: 25rem;
}

.emotion-7 {
  margin: auto;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: default;
}

.emotion-8 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin: 0 1rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-9 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-10 {
  position: relative;
  display: inline-block;
}

.emotion-11 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-12 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1451dc;
  background-color: rgba(23,91,245,0);
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-12:focus-visible:not(:disabled) {
  outline: #F814E1 auto 0.125rem;
}

.emotion-12:disabled {
  opacity: 50%;
  background-color: rgba(23,91,245,0);
  cursor: not-allowed;
}

.emotion-12:hover:not(:disabled) {
  background-color: #175bf517;
}

.emotion-12:active:not(:disabled) {
  background-color: rgba(23, 91, 245, 0.18);
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

.emotion-14 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #c2c8ff;
  box-sizing: border-box;
  background-color: #d0defd;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.625rem;
  font-weight: 500;
  line-height: 1.25rem;
  letter-spacing: 0rem;
}

.emotion-14 img {
  border-radius: #c2c8ff;
  width: 100%;
  height: 100%;
}

.emotion-15 {
  font-weight: 500;
}

.emotion-17 {
  fill: #1451dc;
  width: 1rem;
  height: 1rem;
}

.emotion-17 path {
  fill: #1451dc;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    className="emotion-0"
  >
    <div
      style={
        Object {
          "padding": 10,
        }
      }
    >
      <div
        aria-label="Top Application Banner"
        className="emotion-1"
        role="banner"
      >
        <div
          className="emotion-2"
        >
          <div
            className="emotion-3"
            data-testid="menu-handler"
            onClick={[Function]}
          >
            <span
              className="emotion-4"
              onClick={[Function]}
            >
              <span
                className="emotion-5"
              />
            </span>
          </div>
          <div
            className="emotion-6"
          >
            <div
              className="emotion-7"
            >
              <strong>
                LOGO
              </strong>
              PLACEHOLDER
            </div>
          </div>
        </div>
        <div
          className="emotion-8"
        />
        <div
          className="emotion-9"
        >
          <div
            role="button"
          >
            <div
              className="emotion-10"
              data-testid="userMenu"
            >
              <div
                className="emotion-11"
              >
                <button
                  className="emotion-12"
                  data-testid="button"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    className="emotion-13"
                  >
                    <div
                      className="emotion-14"
                      data-testid="_avatar"
                    >
                      <img
                        src="https://mui.com/static/images/avatar/1.jpg"
                      />
                    </div>
                    <span>
                      <span>
                        <span
                          className="emotion-15"
                        >
                          Tom Cruise
                        </span>
                      </span>
                    </span>
                    <span
                      className="emotion-4"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-17"
                      />
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TopNavBar with Additional Tools 1`] = `
.emotion-0 {
  margin: 1rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  background-color: white;
  height: 3.875rem;
  padding: 0 1rem;
  box-shadow: 0px 4px 8px rgba(16, 48, 102, 0.07);
}

.emotion-1>*:not(:last-of-type) {
  color: #0f0f17;
}

.emotion-2 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-3 {
  cursor: pointer;
  margin: 1.5rem 0px 1.5rem 0.25rem;
}

.emotion-4 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-5 {
  fill: #e7eefe;
  width: 1.5rem;
  height: 1.5rem;
}

.emotion-5 path {
  fill: #e7eefe;
}

.emotion-6 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: transparent;
  margin: 1rem 1.5rem 1rem 1rem;
  border-radius: 0.25rem;
  max-width: 25rem;
}

.emotion-7 {
  margin: auto;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: default;
}

.emotion-8 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin: 0 1rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #cfd7e5;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: auto;
  min-width: 9.375rem;
  height: 2.875rem;
  background-color: white;
}

.emotion-9:hover {
  background-color: #f3f5f8;
}

.emotion-9:focus-within {
  box-shadow: 0 0 0 0.125rem #1451dc;
  background-color: #e7ebf2;
}

.emotion-10 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0 1rem;
}

.emotion-10>div {
  position: relative;
}

.emotion-11 {
  width: 100%;
}

.emotion-12 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  z-index: 1;
  font-size: 0.9375rem;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-12+label {
  font-size: 0.9375rem;
}

.emotion-12:focus {
  outline: none;
}

.emotion-12::-webkit-input-placeholder {
  color: transparent;
}

.emotion-12::-moz-placeholder {
  color: transparent;
}

.emotion-12:-ms-input-placeholder {
  color: transparent;
}

.emotion-12::placeholder {
  color: transparent;
}

.emotion-12:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-12:focus+label,
.emotion-12:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-12:disabled {
  cursor: not-allowed;
}

.emotion-21 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-22 {
  position: relative;
  display: inline-block;
}

.emotion-23 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-24 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1451dc;
  background-color: rgba(23,91,245,0);
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-24:focus-visible:not(:disabled) {
  outline: #F814E1 auto 0.125rem;
}

.emotion-24:disabled {
  opacity: 50%;
  background-color: rgba(23,91,245,0);
  cursor: not-allowed;
}

.emotion-24:hover:not(:disabled) {
  background-color: #175bf517;
}

.emotion-24:active:not(:disabled) {
  background-color: rgba(23, 91, 245, 0.18);
}

.emotion-25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

.emotion-26 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #c2c8ff;
  box-sizing: border-box;
  background-color: #d0defd;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.625rem;
  font-weight: 500;
  line-height: 1.25rem;
  letter-spacing: 0rem;
}

.emotion-26 img {
  border-radius: #c2c8ff;
  width: 100%;
  height: 100%;
}

.emotion-27 {
  font-weight: 500;
}

.emotion-29 {
  fill: #1451dc;
  width: 1rem;
  height: 1rem;
}

.emotion-29 path {
  fill: #1451dc;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    className="emotion-0"
  >
    <div
      style={
        Object {
          "padding": 10,
        }
      }
    >
      <div
        aria-label="Top Application Banner"
        className="emotion-1"
        role="banner"
      >
        <div
          className="emotion-2"
        >
          <div
            className="emotion-3"
            data-testid="menu-handler"
            onClick={[Function]}
          >
            <span
              className="emotion-4"
              onClick={[Function]}
            >
              <span
                className="emotion-5"
              />
            </span>
          </div>
          <div
            className="emotion-6"
          >
            <div
              className="emotion-7"
            >
              <strong>
                LOGO
              </strong>
              PLACEHOLDER
            </div>
          </div>
        </div>
        <div
          className="emotion-8"
        >
          <div
            className="emotion-9"
          >
            <div
              className="emotion-10"
            >
              <div
                className="emotion-11"
              >
                <input
                  className="emotion-12"
                  disabled={false}
                  required={false}
                />
              </div>
            </div>
          </div>
          <div
            className="emotion-9"
          >
            <div
              className="emotion-10"
            >
              <div
                className="emotion-11"
              >
                <input
                  className="emotion-12"
                  disabled={false}
                  required={false}
                />
              </div>
            </div>
          </div>
          <div
            className="emotion-9"
          >
            <div
              className="emotion-10"
            >
              <div
                className="emotion-11"
              >
                <input
                  className="emotion-12"
                  disabled={false}
                  required={false}
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="emotion-21"
        >
          <div
            role="button"
          >
            <div
              className="emotion-22"
              data-testid="userMenu"
            >
              <div
                className="emotion-23"
              >
                <button
                  className="emotion-24"
                  data-testid="button"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    className="emotion-25"
                  >
                    <div
                      className="emotion-26"
                      data-testid="_avatar"
                    >
                      <img
                        src="https://mui.com/static/images/avatar/1.jpg"
                      />
                    </div>
                    <span>
                      <span>
                        <span
                          className="emotion-27"
                        >
                          Tom Cruise
                        </span>
                      </span>
                    </span>
                    <span
                      className="emotion-4"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-29"
                      />
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TopNavBar with Dark theme enabled 1`] = `
.emotion-0 {
  margin: 1rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  background-color: black;
  height: 3.875rem;
  padding: 0 1rem;
  box-shadow: 0px 4px 8px rgba(16, 48, 102, 0.07);
}

.emotion-1>*:not(:last-of-type) {
  color: white;
}

.emotion-2 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-3 {
  cursor: pointer;
  margin: 1.5rem 0px 1.5rem 0.25rem;
}

.emotion-4 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-5 {
  fill: #e7eefe;
  width: 1.5rem;
  height: 1.5rem;
}

.emotion-5 path {
  fill: #e7eefe;
}

.emotion-6 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: transparent;
  margin: 1rem 1.5rem 1rem 1rem;
  border-radius: 0.25rem;
  max-width: 25rem;
}

.emotion-7 {
  margin: auto;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: default;
}

.emotion-8 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin: 0 1rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-9 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-10 {
  position: relative;
  display: inline-block;
}

.emotion-11 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-12 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1451dc;
  background-color: rgba(23,91,245,0);
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-12:focus-visible:not(:disabled) {
  outline: #F814E1 auto 0.125rem;
}

.emotion-12:disabled {
  opacity: 50%;
  background-color: rgba(23,91,245,0);
  cursor: not-allowed;
}

.emotion-12:hover:not(:disabled) {
  background-color: #175bf517;
}

.emotion-12:active:not(:disabled) {
  background-color: rgba(23, 91, 245, 0.18);
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

.emotion-14 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #c2c8ff;
  box-sizing: border-box;
  background-color: #d0defd;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.625rem;
  font-weight: 500;
  line-height: 1.25rem;
  letter-spacing: 0rem;
}

.emotion-14 img {
  border-radius: #c2c8ff;
  width: 100%;
  height: 100%;
}

.emotion-15 {
  font-weight: 500;
}

.emotion-17 {
  fill: #1451dc;
  width: 1rem;
  height: 1rem;
}

.emotion-17 path {
  fill: #1451dc;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    className="emotion-0"
  >
    <div
      style={
        Object {
          "padding": 10,
        }
      }
    >
      <div
        aria-label="Top Application Banner"
        className="emotion-1"
        role="banner"
      >
        <div
          className="emotion-2"
        >
          <div
            className="emotion-3"
            data-testid="menu-handler"
            onClick={[Function]}
          >
            <span
              className="emotion-4"
              onClick={[Function]}
            >
              <span
                className="emotion-5"
              />
            </span>
          </div>
          <div
            className="emotion-6"
          >
            <div
              className="emotion-7"
            >
              <strong>
                LOGO
              </strong>
              PLACEHOLDER
            </div>
          </div>
        </div>
        <div
          className="emotion-8"
        />
        <div
          className="emotion-9"
        >
          <div
            role="button"
          >
            <div
              className="emotion-10"
              data-testid="userMenu"
            >
              <div
                className="emotion-11"
              >
                <button
                  className="emotion-12"
                  data-testid="button"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    className="emotion-13"
                  >
                    <div
                      className="emotion-14"
                      data-testid="_avatar"
                    >
                      <img
                        src="https://mui.com/static/images/avatar/1.jpg"
                      />
                    </div>
                    <span>
                      <span>
                        <span
                          className="emotion-15"
                        >
                          Tom Cruise
                        </span>
                      </span>
                    </span>
                    <span
                      className="emotion-4"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-17"
                      />
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TopNavBar with Logo Placeholder 1`] = `
.emotion-0 {
  margin: 1rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  background-color: white;
  height: 3.875rem;
  padding: 0 1rem;
  box-shadow: 0px 4px 8px rgba(16, 48, 102, 0.07);
}

.emotion-1>*:not(:last-of-type) {
  color: #0f0f17;
}

.emotion-2 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-3 {
  cursor: pointer;
  margin: 1.5rem 0px 1.5rem 0.25rem;
}

.emotion-4 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-5 {
  fill: #e7eefe;
  width: 1.5rem;
  height: 1.5rem;
}

.emotion-5 path {
  fill: #e7eefe;
}

.emotion-6 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: transparent;
  margin: 1rem 1.5rem 1rem 1rem;
  border-radius: 0.25rem;
  max-width: 25rem;
}

.emotion-7 {
  margin: auto;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: default;
}

.emotion-8 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin: 0 1rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-9 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-10 {
  position: relative;
  display: inline-block;
}

.emotion-11 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-12 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1451dc;
  background-color: rgba(23,91,245,0);
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-12:focus-visible:not(:disabled) {
  outline: #F814E1 auto 0.125rem;
}

.emotion-12:disabled {
  opacity: 50%;
  background-color: rgba(23,91,245,0);
  cursor: not-allowed;
}

.emotion-12:hover:not(:disabled) {
  background-color: #175bf517;
}

.emotion-12:active:not(:disabled) {
  background-color: rgba(23, 91, 245, 0.18);
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

.emotion-14 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #c2c8ff;
  box-sizing: border-box;
  background-color: #d0defd;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.625rem;
  font-weight: 500;
  line-height: 1.25rem;
  letter-spacing: 0rem;
}

.emotion-14 img {
  border-radius: #c2c8ff;
  width: 100%;
  height: 100%;
}

.emotion-15 {
  font-weight: 500;
}

.emotion-17 {
  fill: #1451dc;
  width: 1rem;
  height: 1rem;
}

.emotion-17 path {
  fill: #1451dc;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    className="emotion-0"
  >
    <div
      style={
        Object {
          "padding": 10,
        }
      }
    >
      <div
        aria-label="Top Application Banner"
        className="emotion-1"
        role="banner"
      >
        <div
          className="emotion-2"
        >
          <div
            className="emotion-3"
            data-testid="menu-handler"
            onClick={[Function]}
          >
            <span
              className="emotion-4"
              onClick={[Function]}
            >
              <span
                className="emotion-5"
              />
            </span>
          </div>
          <div
            className="emotion-6"
          >
            <div
              className="emotion-7"
            >
              <strong>
                LOGO
              </strong>
              PLACEHOLDER
            </div>
          </div>
        </div>
        <div
          className="emotion-8"
        />
        <div
          className="emotion-9"
        >
          <div
            role="button"
          >
            <div
              className="emotion-10"
              data-testid="userMenu"
            >
              <div
                className="emotion-11"
              >
                <button
                  className="emotion-12"
                  data-testid="button"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    className="emotion-13"
                  >
                    <div
                      className="emotion-14"
                      data-testid="_avatar"
                    >
                      <img
                        src="https://mui.com/static/images/avatar/1.jpg"
                      />
                    </div>
                    <span>
                      <span>
                        <span
                          className="emotion-15"
                        >
                          Tom Cruise
                        </span>
                      </span>
                    </span>
                    <span
                      className="emotion-4"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-17"
                      />
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
